fix: 🛠️  #107 削除したfont-familyを元に戻す

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,7 @@
     @apply border-border;
   }
   body {
+    font-family: var(--font-inter), var(--font-notojp);
     @apply bg-background text-foreground;
   }
 }
